Fix color contrast

--- a/_assets/stylesheets/_variables.scss
+++ b/_assets/stylesheets/_variables.scss
@@ -65,7 +65,7 @@ $gloss-black: #151823; // black bg color
 
 $black: #12161b;
 $grey-dk: #272f38;
-$grey-md: #a7a2a2;
+$grey-md: #767676;
 $grey-lt: #b2b2b2;
 $red: #df303a;
 $red-lt: #fa8e98;
